# kokkosPytorch

./: CMakeLists.txt  README.md  gmodel.pt  model.pt  simple_view_lambda.cpp
